<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.quizapp.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/appBackground">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/icon"
            android:src="@drawable/icon"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"/>

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_desc"
            android:layout_toRightOf="@+id/icon"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"/>

        <LinearLayout

            android:id="@+id/quiz_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:layout_below="@+id/icon">


            <TextView
                style="@style/NormalTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz1"/>
            <RadioGroup
                style="@style/RadioGroupStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    style="@style/WidgetStyle"
                    android:id="@+id/quiz1_radio1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text= "@string/quiz1_radio1"/>
                <RadioButton
                    style="@style/WidgetStyle"
                    android:id="@+id/quiz1_radio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text= "@string/quiz1_radio2"/>
                <RadioButton
                    style="@style/WidgetStyle"
                    android:id="@+id/quiz1_radio3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text= "@string/quiz1_radio3"/>
            </RadioGroup>
            <TextView
                style="@style/NormalTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz2"/>
            <RadioGroup
                style="@style/RadioGroupStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    style="@style/WidgetStyle"
                    android:id="@+id/quiz2_radio1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text= "@string/quiz2_radio1"/>
                <RadioButton
                    style="@style/WidgetStyle"
                    android:id="@+id/quiz2_radio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text= "@string/quiz2_radio2"/>
                <RadioButton
                    style="@style/WidgetStyle"
                    android:id="@+id/quiz2_radio3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text= "@string/quiz2_radio3"/>
            </RadioGroup>
            <TextView
                style="@style/NormalTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz3"/>
            <RadioGroup
                style="@style/RadioGroupStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    style="@style/WidgetStyle"
                    android:id="@+id/quiz3_radio1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text= "@string/quiz3_radio1"/>
                <RadioButton
                    style="@style/WidgetStyle"
                    android:id="@+id/quiz3_radio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text= "@string/quiz3_radio2"/>
                <RadioButton
                    style="@style/WidgetStyle"
                    android:id="@+id/quiz3_radio3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text= "@string/quiz3_radio3"/>
            </RadioGroup>
            <TextView
                style="@style/NormalTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz4"/>
            <RadioGroup
                style="@style/RadioGroupStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    style="@style/WidgetStyle"
                    android:id="@+id/quiz4_radio1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text= "@string/quiz4_radio1"/>
                <RadioButton
                    style="@style/WidgetStyle"
                    android:id="@+id/quiz4_radio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text= "@string/quiz4_radio2"/>
                <RadioButton
                    style="@style/WidgetStyle"
                    android:id="@+id/quiz4_radio3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text= "@string/quiz4_radio3"/>
            </RadioGroup>
            <TextView
                style="@style/NormalTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz5"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/RadioGroupStyle">
                <RadioButton
                    style="@style/WidgetStyle"
                    android:id="@+id/quiz5_radio1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text= "@string/quiz5_radio1"/>
                <RadioButton
                    style="@style/WidgetStyle"
                    android:id="@+id/quiz5_radio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text= "@string/quiz5_radio2"/>
                <RadioButton
                    style="@style/WidgetStyle"
                    android:id="@+id/quiz5_radio3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text= "@string/quiz5_radio3"/>
            </RadioGroup>
            <TextView
                style="@style/NormalTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz7"/>
            <EditText
                style="@style/NormalTextStyle"
                android:id="@+id/answer_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/NormalTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/quiz6"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    style="@style/WidgetStyle"
                    android:id="@+id/quiz6Checkbox1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text= "@string/checkbox1"/>
                <CheckBox
                    style="@style/WidgetStyle"
                    android:id="@+id/quiz6Checkbox2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text= "@string/checkbox2"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    style="@style/WidgetStyle"
                    android:id="@+id/quiz6Checkbox3"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text= "@string/checkbox3"/>
                <CheckBox
                    style="@style/WidgetStyle"
                    android:id="@+id/quiz6Checkbox4"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text= "@string/checkbox4"/>
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/background_image1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/background"
            android:alpha="0.1"
            android:layout_below="@+id/icon"/>

        <ImageView
            android:id="@+id/background_image2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/background"
            android:alpha="0.1"
            android:layout_below="@+id/background_image1"
            android:layout_marginTop="100dp" />

        <ImageView
            android:id="@+id/background_image3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/background"
            android:alpha="0.1"
            android:layout_below="@+id/background_image2"
            android:layout_marginTop="100dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_result"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/quiz_layout"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary"
            android:textColor="#FFFFFF"
            android:onClick="submitResult"/>

    </RelativeLayout>

</ScrollView>
